# gachix

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  nixos-module.nix  nixos-test.nix  package.nix  test_config.yaml
.github/workflows/: push_docker.yml
modules/: docker-image.nix  formatter.nix  github-actions.nix  nixos-module.nix  nixos-test.nix  package.nix
src/: main.rs  nar.rs  server.rs  settings.rs  store.rs
src/git_store/: cache_info.rs  mod.rs  nar_info.rs  repository.rs  store.rs  store_entry.rs
src/http_server/: server.rs
src/nar/: decode.rs  encode.rs  encode_stream.rs  mod.rs
src/nix_cache_server/: server.rs
src/nix_interface/: cache_info.rs  daemon.rs  mod.rs  nar_info.rs  path.rs  signature.rs
tests/: git_remote.rs  server_tests.rs
tests/common/: mod.rs
