[package]
name = "gachix"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20"
clap = { version = "4.5.48", features = ["derive"] }
nix-base32 = "0.2.0"
sha2 = "0.10.9"
actix-web = "4.11.0"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
liblzma = "0.4.5"

[dev-dependencies]
nix-nar = "0.3.0"
tempfile = "3.23.0"
